- Fixed Makefile to use correct libcurl flags
git-svn-id: svn://localhost/mossofs@2 a8bed3e6-0eea-4999-a5e1-f6419deda748

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,15 +1,16 @@
 CC := $(shell which gcc)
 
-LIBS := fuse \
-		libcurl
+LIBS := fuse 
 
 
 SRC := src/mossofs.c
 
 CFLAGS := $(shell pkg-config --cflags $(LIBS)) \
+		  $(shell curl-config --cflags) \
 		  -DFUSE_USE_VERSION=22
 
-LDFLAGS := $(shell pkg-config --libs $(LIBS))
+LDFLAGS := $(shell pkg-config --libs $(LIBS)) \
+		   $(shell curl-config --libs)
 
 all: mossofs
 
