- Added simple curl content wrapper - Implementd commandline parsing - Started implementing function for mosso authentication
git-svn-id: svn://localhost/mossofs@3 a8bed3e6-0eea-4999-a5e1-f6419deda748

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -3,7 +3,10 @@ CC := $(shell which gcc)
 LIBS := fuse 
 
 
-SRC := src/mossofs.c
+SRC := src/mossofs.c \
+       src/salloc.c \
+       src/simple_curl.c \
+       src/mosso.c
 
 CFLAGS := $(shell pkg-config --cflags $(LIBS)) \
 		  $(shell curl-config --cflags) \
