- Implemented: Simple base functionality for caching # This introduces a dependency on glib, because glib data structures are used.
git-svn-id: svn://localhost/mossofs@45 a8bed3e6-0eea-4999-a5e1-f6419deda748

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -5,27 +5,32 @@ set(SRC
 	salloc.c
 	simple_curl.c
 	mosso.c
+	cache.c
 )
 
 set(HEADER
 	mosso.h
 	salloc.h
 	simple_curl.h
+	cache.h
 )
 
 find_package(PkgConfig)
 pkg_check_modules(FUSE REQUIRED fuse)
+pkg_check_modules(GLIB REQUIRED glib-2.0)
 
 find_package( CURL REQUIRED )
 
 set(CFLAGS
 	${FUSE_CFLAGS} ${FUSE_CFLAGS_OTHER}
+	${GLIB_CFLAGS} ${GLIB_CFLAGS_OTHER}
 	-DFUSE_USE_VERSION=26
 )
 add_definitions(${CFLAGS})
 
 set(LIBS
 	${FUSE_LIBRARIES}
+	${GLIB_LIBRARIES}
 	${CURL_LIBRARIES}
 )
 link_libraries(${LIBS})
