--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -1,3 +1,24 @@
+##
+# This file is part of Mossofs.
+#
+# Mossofs is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; version 3 of the
+# License.
+#
+# Mossofs is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Mossofs; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+# 02110-1301  USA
+#
+# Copyright (C) 2009 Jakob Westhoff <jakob@westhoffswelt.de>
+##
+
 include_directories(.)
 
 set(SRC 
@@ -38,4 +59,10 @@ link_libraries(${LIBS})
 add_executable(mossofs
 	${SRC}
 	${HEADER}
+)
+
+install(FILES 
+		${CMAKE_CURRENT_BINARY_DIR}/mossofs
+	DESTINATION
+		bin
 )
